--- a/scss pages/style.css
+++ b/scss pages/style.css
@@ -1,1 +1,1 @@
-body{background:#ff8902}
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital@1&family=Poppins:ital,wght@1,200&family=Raleway&family=Roboto+Slab:wght@300&display=swap");*{box-sizing:border-box;margin:0;padding:0}body{font-family:'Roboto Slab', sans-serif;font-size:1rem;line-height:1.5;color:#000}
