--- a/scss pages/style.scss
+++ b/scss pages/style.scss
@@ -1,7 +1,16 @@
 @import 'utilities';
 @import 'mixins';
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital@1&family=Poppins:ital,wght@1,200&family=Raleway&family=Roboto+Slab:wght@300&display=swap');
 
+*{
+box-sizing:border-box;
+margin:0;
+padding:0;
+}
 
-body {
-    background:$primary-color;
+body{
+    font-family:'Roboto Slab', sans-serif;
+    font-size:1rem;
+    line-height: 1.5;
+    color:$dark-color;
 }
