--- a/scss pages/utilities.scss
+++ b/scss pages/utilities.scss
@@ -1,1 +1,6 @@
 $primary-color:rgb(255, 137, 2);
+$dark-color:rgb(0, 0, 0);
+$light-color:rgb(255, 255, 255);
+$success-color:rgb(8, 212, 8);
+$danger-color:rgb(255, 0, 0);
+$max-width:1100px;
