--- a/scss pages/style.scss
+++ b/scss pages/style.scss
@@ -12,5 +12,68 @@ body{
     font-family:'Roboto Slab', sans-serif;
     font-size:1rem;
     line-height: 1.5;
-    color:$dark-color;
+    //color:$dark-color;
 }
+//The Navbar
+a{
+    text-decoration:none;
+    color:$primary-color;
+}
+
+ul{
+    list-style:none;
+}
+
+img{
+    width:100%;
+}
+.navbar{
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    padding: 0.5rem 2rem;
+    position:fixed;
+    z-index:1;
+    width: 100%;
+    top:0;
+    border-bottom:solid 2px $primary-color;
+    opacity:0.9;
+ul{
+    display:flex;
+}
+    a{
+       color:$light-color;
+        padding:1rem;
+        margin: 0 0.25rem;
+
+        &:hover{
+            color:$primary-color;
+        }
+    
+}
+}
+//End Of Navbar
+
+
+
+//Landing Page
+.landing-page{
+    position:relative;
+    background: url('../images/landing\ page\ image.jpg') no-repeat center center/cover;
+    height:100vh;
+
+    &-content {
+color:$light-color;
+height:100%;
+display:flex;
+flex-direction: column;
+widows: 80%;
+align-items: center;
+margin:auto;
+justify-content: center;
+text-align:center;
+    }
+}
+//End Of Landing Page
+
+
