--- a/scss pages/utilities.scss
+++ b/scss pages/utilities.scss
@@ -1,6 +1,94 @@
-$primary-color:rgb(255, 137, 2);
-$dark-color:rgb(0, 0, 0);
+@import 'mixins';
+
+//colors
+$primary-color:rgb(255, 132, 0);
+$dark-color:rgb(24, 23, 23);
 $light-color:rgb(255, 255, 255);
 $success-color:rgb(8, 212, 8);
 $danger-color:rgb(255, 0, 0);
 $max-width:1100px;
+
+//text-types
+.x-large-text{
+font-size:4rem;
+line-height: 1.5;
+margin-bottom: 1rem;
+}
+.large-text{
+    font-size:2.5rem;
+    line-height: 1.5;
+    margin-bottom: 1rem;
+    }
+ .lead{
+        font-size:1.25rem;
+        margin-bottom: 1rem;
+        }
+
+//backgrounds
+.bg {
+    &-primary{
+      @include set-background($primary-color); 
+    }
+    &-dark{
+        @include set-background($dark-color); 
+      }
+      &-light{
+        @include set-background($light-color);
+        border:1px solid black; 
+      }
+      &-success{
+        @include set-background($success-color); 
+      }
+      &-danger{
+        @include set-background($danger-color); 
+      }
+}
+
+//dark-overlay
+.dark-overlay{
+    height:100%;
+    width: 100%;
+    position: absolute;
+    top:0;
+    left:0;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+
+//Buttons
+.btn {
+display: inline-block;
+background:$light-color;
+padding:0.5rem;
+border:none;
+cursor:pointer;
+font-size:1rem;
+margin-right: 0.5rem;
+outline:none;
+transition: all 0.3s ease-in;
+&:hover{
+    background:lighten($light-color, 10%);
+    color:white;
+}
+
+}
+
+.btn-primary{
+    background:$primary-color;
+    color:white;
+    &:hover{
+        background:lighten($primary-color, 15%);
+        color:$light-color;
+    }
+}
+.btn-dark{
+    background:$light-color;
+    color:black;
+    &:hover{
+        background:lighten($dark-color, 25%);
+        color:$light-color;
+    }
+}
+//End Of Buttons
+
+
