--- a/scss pages/utilities.scss
+++ b/scss pages/utilities.scss
@@ -91,4 +91,11 @@ transition: all 0.3s ease-in;
 }
 //End Of Buttons
 
-
+//White box
+.white-box{
+  border: 1px solid black;
+  position: absolute;
+  width:75%;
+  background: none;
+  color:white;
+}
