added image with dark overlay onto our gyms page

--- a/scss pages/style.scss
+++ b/scss pages/style.scss
@@ -77,8 +77,10 @@ text-align:center;
 //End Of Landing Page
 
 //Gym Page
-.gym{
-   
+.gym-page{
+    position:relative;
+    background: url('../images/gym\ page\ background.jpg') no-repeat center center/cover;
+    height:250vh;
 }
 
 //End of gym page
