added new link to navbar

--- a/scss pages/style.scss
+++ b/scss pages/style.scss
@@ -78,9 +78,11 @@ text-align:center;
 
 //Gym Page
 .gym-page{
+    width:100%;
     position:relative;
     background: url('../images/gym\ page\ background.jpg') no-repeat center center/cover;
     height:250vh;
+
 }
 
 //End of gym page
