--- a/scss pages/style.scss
+++ b/scss pages/style.scss
@@ -78,10 +78,40 @@ text-align:center;
 
 //Gym Page
 .gym-page{
-    width:100%;
+    
     position:relative;
     background: url('../images/gym\ page\ background.jpg') no-repeat center center/cover;
-    height:250vh;
+    height:270vh;
+    &-content {
+        color:$light-color;
+        height:100%;
+        display:flex;
+        flex-direction: column;
+        widows: 80%;
+        align-items: center;
+        margin:auto;
+        justify-content: center;
+        text-align:center;
+            }
+
+
+&-content-box{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    color:$light-color;
+ height:90%;
+align-items: center;
+margin:auto;
+justify-content: center;
+text-align:center;
+img{
+height:100%;
+&:hover{
+    transform: scale(1.03);
+    transition: 0.3s ease-out;
+}
+}
+}
 
 }
 
