added footer to created pages

--- a/scss pages/style.scss
+++ b/scss pages/style.scss
@@ -116,3 +116,16 @@ height:100%;
 }
 
 //End of gym page
+
+//Footer
+.footer{
+    background:$primary-color;
+    color:white;
+    align-items: center;
+margin:auto;
+justify-content: center;
+text-align:center;
+    height:7vh;
+    padding-top:15px
+}
+//End of Footer
