added membership page

--- a/scss pages/style.scss
+++ b/scss pages/style.scss
@@ -108,13 +108,12 @@ img{
 height:100%;
 &:hover{
     transform: scale(1.03);
-    transition: 0.3s ease-out;
+    transition: 0.4s;
 }
 }
 }
 
 }
-
 //End of gym page
 
 //Footer
