--- a/scss pages/style.scss
+++ b/scss pages/style.scss
@@ -140,6 +140,18 @@ h1{
 
 //End of membership Section
 
+
+
+//Sign In page
+.sign-in-form-item{
+    padding:25px;
+}
+.sign-in{
+    height:93vh;
+}
+//End of sign-in page
+
+
 //Footer
 .footer{
     background:$primary-color;
@@ -149,6 +161,7 @@ margin:auto;
 justify-content: center;
 text-align:center;
     height:7vh;
-    padding-top:15px
+    padding-top:15px;
+    
 }
 //End of Footer
