added sign-up page

--- a/scss pages/style.scss
+++ b/scss pages/style.scss
@@ -141,6 +141,17 @@ h1{
 //End of membership Section
 
 
+//Sign up Page
+.form-item{
+    padding:10px;
+}
+.form-item > input{
+    width:30%;
+    height:5vh;
+    
+}
+
+//End of sign-up page
 
 //Sign In page
 .sign-in-form-item{
