--- a/scss pages/utilities.scss
+++ b/scss pages/utilities.scss
@@ -13,6 +13,7 @@ $max-width:1100px;
 font-size:4rem;
 line-height: 1.5;
 margin-bottom: 1rem;
+
 }
 .large-text{
     font-size:2.5rem;
@@ -101,3 +102,8 @@ border-radius: 45px 45px 45px 45px;
 }
 
 //End Of Buttons
+
+//Center Text
+.center{
+  text-align:center;
+}
