--- a/scss pages/style.scss
+++ b/scss pages/style.scss
@@ -1,5 +1,6 @@
 @import 'utilities';
 @import 'mixins';
+@import 'media-queries';
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital@1&family=Poppins:ital,wght@1,200&family=Raleway&family=Roboto+Slab:wght@300&display=swap');
 
 *{
