--- a/scss pages/media-queries.css
+++ b/scss pages/media-queries.css
@@ -1,1 +1,1 @@
-@media screen and (max-width: 700px){.navbar ul a{font-size:10px}h1 a i{color:black}}
+@media screen and (max-width: 700px){.gym-heading{font-size:2rem}.lead{font-size:1rem}.btn-gym{padding:0.5rem;font-size:0.9rem}.gym-page h1{font-size:3.5rem}}
