made team page responsive

--- a/scss pages/media-queries.scss
+++ b/scss pages/media-queries.scss
@@ -18,4 +18,13 @@ font-size:0.9rem;
     }
 }
 //End of gym page
+
+//Team Page
+.team-text{
+    font-size:3rem;
+    .fa-users{
+        display:none;
+    }
+}
+//End of team page
 }
