--- a/scss pages/media-queries.css
+++ b/scss pages/media-queries.css
@@ -1,1 +1,1 @@
-@media screen and (max-width: 700px){.gym-heading{font-size:2rem}.lead{font-size:1rem}.btn-gym{padding:0.5rem;font-size:0.9rem}.gym-page h1{font-size:3.5rem}}
+@media screen and (max-width: 700px){.gym-heading{font-size:2rem}.lead{font-size:1rem}.btn-gym{padding:0.5rem;font-size:0.9rem}.gym-page h1{font-size:3.5rem}.team-text{font-size:3rem}.team-text .fa-users{display:none}}
