--- a/scss pages/style.scss
+++ b/scss pages/style.scss
@@ -238,5 +238,56 @@ text-align:center;
 
 
 //Media Queries
+@media screen and (max-width: 900px){
+  //navbar
 
+  //end of navbar
+   
+
+  //membership
+    .membership-section{
+        position:relative;
+        background: url('../images/membership\ page.jpg') no-repeat center center/cover;
+        height:270vh;
+        color:white;
+    }
+    
+    .membership-grid{
+        display:grid;
+        grid-template-columns: 1fr;
+        text-align:center;
+    }
+    //End of members section
+    //Gym page
+ .gym-heading{
+    font-size:2rem;
+}
+.lead{
+    font-size:1rem;
+}
+.btn-gym{
+    padding:0.5rem;
+font-size:0.9rem;
+}
+
+.gym-page{
+    h1{
+        font-size:3.5rem;
+    }
+}
+//End of gym page
+
+
+//Team Page
+.team-text{
+    font-size:3rem;
+    .fa-users{
+        display:none;
+    }
+}
+
+    
+    }
+    
+    
 //End of Media Queries
